# libdsvdc

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  doxygen.conf  libdsvdc.pc.in
examples/: Makefile.am  reference.c  vdc-reference.c
messages/: Makefile.am  messages.proto  vdcapi.proto
src/: Makefile.am  common.h  database.c  database.h  discovery.c  discovery.h  dsvdc.c  dsvdc.h  log.c  log.h  msg_processor.c  msg_processor.h  properties.c  properties.h  sockutil.c  sockutil.h  util.c  util.h
tests/: Makefile.am  vdc_database.c  vdc_mainloop.c  vdc_properties.c
